--- a/data/main.css
+++ b/data/main.css
@@ -46,7 +46,7 @@ tr{padding-top: 1vh; width: inherit;}
 .mainButtons{height:25vh; padding-left: 4vw;}
 .mainOptions{height:12vh; text-align: left; padding-left: 4vw; font-size: 3.5vh;}
 .mainValues{height:15vh;}
-.mainActions{height:30vh; padding-left: 4vw;}
+.mainActions{height:20vh; padding-left: 4vw;}
 
 .paramWindow{height: 50vh; overflow-y: scroll; overflow-x: hidden; border: 2px solid black; margin-left: 1vw;}
 
@@ -107,14 +107,15 @@ button.active:active {
 }
 
 button.setting{
-    left: 9vw;
-    width: 80vw;
-    margin-top: 8vw;
-    font-size: 4.5vh;
+    left: 4.5vw;
+    width: 45vw;
+    margin-top: 5vh;
+    font-size: 4vh;
+    text-align: center;
 }
 
 button.actions{
-    font-size: 4.5vh;
+    font-size: 4vh;
 }
 
 .val_div{
