--- a/data/setting.css
+++ b/data/setting.css
@@ -1,3 +1,34 @@
 body {
     background-color: #959bbf;
+    font-size: 3vh;
 }
+
+.fontSize{
+    font-size: 3vh;
+}
+
+.inputStr{
+    font-size: 3vh;
+    width: 50vw;
+}
+
+.checkBox{
+    margin-top: 2vh;
+    width: 3vw;
+    height: 3vh;
+    transform:scale(2);
+}
+
+.short{
+    font-size: 2.6vh;
+    width: 15vw;
+}
+
+.button{
+    height: 5vh;
+    font-size: 3.5vh;
+    width:90vw;
+    margin-top: 4vh;
+    margin-left: 5vw;
+}
+
